{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 382,
  "lineage": "980d7eab-8f76-da66-fb2d-75968ca1587f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0abe8deee7dfcbaf5",
            "arn": "arn:aws:ec2:eu-west-3:131674823919:elastic-ip/eipalloc-0abe8deee7dfcbaf5",
            "association_id": "eipassoc-0c871f5a440da0b61",
            "domain": "vpc",
            "id": "eipalloc-0abe8deee7dfcbaf5",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0dc0dfbd240c3797b",
            "private_dns": "ip-10-0-1-97.eu-west-3.compute.internal",
            "private_ip": "10.0.1.97",
            "public_dns": "ec2-52-47-109-76.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.109.76",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-nat-eip-1",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-nat-eip-1",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4a33bfcd0cba3fc",
            "arn": "arn:aws:ec2:eu-west-3:131674823919:elastic-ip/eipalloc-0c4a33bfcd0cba3fc",
            "association_id": "eipassoc-0c4bba8deb4411da2",
            "domain": "vpc",
            "id": "eipalloc-0c4a33bfcd0cba3fc",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0ee87356018b4b7c4",
            "private_dns": "ip-10-0-10-150.eu-west-3.compute.internal",
            "private_ip": "10.0.10.150",
            "public_dns": "ec2-15-237-97-98.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.97.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-nat-eip-2",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-nat-eip-2",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:internet-gateway/igw-09885b6abdd64c1d8",
            "id": "igw-09885b6abdd64c1d8",
            "owner_id": "131674823919",
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-igw",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-igw",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "vpc_id": "vpc-01024587050b396c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:loadbalancer/app/microservices-p-dev-alb/a8abc4250a76d3a4",
            "arn_suffix": "app/microservices-p-dev-alb/a8abc4250a76d3a4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "microservices-p-dev-alb-1611049661.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:loadbalancer/app/microservices-p-dev-alb/a8abc4250a76d3a4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "microservices-p-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06b5d3e0128224c40"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05bcb56384cc10782"
              },
              {
                "subnet_id": "subnet-0bd5f5654501fb5e8"
              }
            ],
            "subnets": [
              "subnet-05bcb56384cc10782",
              "subnet-0bd5f5654501fb5e8"
            ],
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-alb",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-alb",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "vpc_id": "vpc-01024587050b396c8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:listener/app/microservices-p-dev-alb/a8abc4250a76d3a4/ed85a3651b786921",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:targetgroup/microservices-p-dev-trf/ddb242bbf27f0d40",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:listener/app/microservices-p-dev-alb/a8abc4250a76d3a4/ed85a3651b786921",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:loadbalancer/app/microservices-p-dev-alb/a8abc4250a76d3a4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "microservices-platform"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.traefik",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "traefik",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:targetgroup/microservices-p-dev-trf/ddb242bbf27f0d40",
            "arn_suffix": "targetgroup/microservices-p-dev-trf/ddb242bbf27f0d40",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,404",
                "path": "/ping",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:131674823919:targetgroup/microservices-p-dev-trf/ddb242bbf27f0d40",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:131674823919:loadbalancer/app/microservices-p-dev-alb/a8abc4250a76d3a4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "microservices-p-dev-trf",
            "port": 30080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-traefik-tg",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-traefik-tg",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01024587050b396c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0abe8deee7dfcbaf5",
            "association_id": "eipassoc-0c871f5a440da0b61",
            "connectivity_type": "public",
            "id": "nat-05ea565449bf1753e",
            "network_interface_id": "eni-0dc0dfbd240c3797b",
            "private_ip": "10.0.1.97",
            "public_ip": "52.47.109.76",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05bcb56384cc10782",
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-nat-1",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-nat-1",
              "Project": "microservices-platform",
              "Team": "Platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4a33bfcd0cba3fc",
            "association_id": "eipassoc-0c4bba8deb4411da2",
            "connectivity_type": "public",
            "id": "nat-0ce3bf7b0244606e4",
            "network_interface_id": "eni-0ee87356018b4b7c4",
            "private_ip": "10.0.10.150",
            "public_ip": "15.237.97.98",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bd5f5654501fb5e8",
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-nat-2",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-nat-2",
              "Project": "microservices-platform",
              "Team": "Platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:route-table/rtb-0783536eae6bc53e5",
            "id": "rtb-0783536eae6bc53e5",
            "owner_id": "131674823919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05ea565449bf1753e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-private-eks-rt-1",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-private-eks-rt-1",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-01024587050b396c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:route-table/rtb-08d7041a5ebc543b0",
            "id": "rtb-08d7041a5ebc543b0",
            "owner_id": "131674823919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ce3bf7b0244606e4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-private-eks-rt-2",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-private-eks-rt-2",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-01024587050b396c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:route-table/rtb-09a2a60d7f6ca22eb",
            "id": "rtb-09a2a60d7f6ca22eb",
            "owner_id": "131674823919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05ea565449bf1753e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-private-rds-rt-1",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-private-rds-rt-1",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-01024587050b396c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:route-table/rtb-0fef46c60bc0f2fb8",
            "id": "rtb-0fef46c60bc0f2fb8",
            "owner_id": "131674823919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ce3bf7b0244606e4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-private-rds-rt-2",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-private-rds-rt-2",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-01024587050b396c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:route-table/rtb-07bf20d4349678c01",
            "id": "rtb-07bf20d4349678c01",
            "owner_id": "131674823919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09885b6abdd64c1d8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-public-rt",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-public-rt",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-01024587050b396c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063b603825a744e4c",
            "route_table_id": "rtb-0783536eae6bc53e5",
            "subnet_id": "subnet-04494645e57e6df65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_eks",
            "aws_subnet.private_eks",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e00bb0fb680d23c",
            "route_table_id": "rtb-08d7041a5ebc543b0",
            "subnet_id": "subnet-0eda635fdf4779530"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_eks",
            "aws_subnet.private_eks",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c74072442ccaf0b4",
            "route_table_id": "rtb-09a2a60d7f6ca22eb",
            "subnet_id": "subnet-0ba519f3ff6a04986"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_rds",
            "aws_subnet.private_rds",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015317f83a8a658c6",
            "route_table_id": "rtb-0fef46c60bc0f2fb8",
            "subnet_id": "subnet-0fd21838cc5d0127e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_rds",
            "aws_subnet.private_rds",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e32e822327ddf5b",
            "route_table_id": "rtb-07bf20d4349678c01",
            "subnet_id": "subnet-05bcb56384cc10782"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08830450c3b7641ad",
            "route_table_id": "rtb-07bf20d4349678c01",
            "subnet_id": "subnet-0bd5f5654501fb5e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:security-group/sg-06b5d3e0128224c40",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b5d3e0128224c40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "microservices-platform-dev-alb-2025120411111774090000000d",
            "name_prefix": "microservices-platform-dev-alb-",
            "owner_id": "131674823919",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-alb-sg",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-alb-sg",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-01024587050b396c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:security-group/sg-072d413bccc216a16",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072d413bccc216a16",
            "ingress": [],
            "name": "microservices-platform-dev-eks-cluster-2025120411111773430000000c",
            "name_prefix": "microservices-platform-dev-eks-cluster-",
            "owner_id": "131674823919",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-eks-cluster-sg",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-eks-cluster-sg",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-01024587050b396c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:security-group/sg-0b144d7d7f10f832b",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b144d7d7f10f832b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach nodes",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b5d3e0128224c40"
                ],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS traffic to Traefik",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b5d3e0128224c40"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-072d413bccc216a16"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic to Traefik",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b5d3e0128224c40"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "microservices-platform-dev-eks-nodes-20251204111120442500000011",
            "name_prefix": "microservices-platform-dev-eks-nodes-",
            "owner_id": "131674823919",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-eks-nodes-sg",
              "Team": "Platform",
              "kubernetes.io/cluster/microservices-platform-dev": "owned"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-eks-nodes-sg",
              "Project": "microservices-platform",
              "Team": "Platform",
              "kubernetes.io/cluster/microservices-platform-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01024587050b396c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:security-group/sg-06d41958b71bf680d",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d41958b71bf680d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EKS nodes",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b144d7d7f10f832b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "microservices-platform-dev-rds-20251204111125043300000012",
            "name_prefix": "microservices-platform-dev-rds-",
            "owner_id": "131674823919",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-rds-sg",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-rds-sg",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-01024587050b396c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_to_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster to communicate with worker nodes",
            "from_port": 1025,
            "id": "sgrule-4190150014",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b144d7d7f10f832b",
            "security_group_rule_id": "sgr-041126b60d4ac95ab",
            "self": false,
            "source_security_group_id": "sg-072d413bccc216a16",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_to_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with cluster API",
            "from_port": 443,
            "id": "sgrule-3957504278",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-072d413bccc216a16",
            "security_group_rule_id": "sgr-029fabfcfbb16de70",
            "self": false,
            "source_security_group_id": "sg-0b144d7d7f10f832b",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:subnet/subnet-04494645e57e6df65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04494645e57e6df65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131674823919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-private-eks-1",
              "Team": "Platform",
              "kubernetes.io/cluster/microservices-platform-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-private-eks-1",
              "Project": "microservices-platform",
              "Team": "Platform",
              "kubernetes.io/cluster/microservices-platform-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01024587050b396c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:subnet/subnet-0eda635fdf4779530",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eda635fdf4779530",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131674823919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-private-eks-2",
              "Team": "Platform",
              "kubernetes.io/cluster/microservices-platform-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-private-eks-2",
              "Project": "microservices-platform",
              "Team": "Platform",
              "kubernetes.io/cluster/microservices-platform-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01024587050b396c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:subnet/subnet-0ba519f3ff6a04986",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba519f3ff6a04986",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131674823919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-private-rds-1",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-private-rds-1",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "vpc_id": "vpc-01024587050b396c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:subnet/subnet-0fd21838cc5d0127e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd21838cc5d0127e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131674823919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-private-rds-2",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-private-rds-2",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "vpc_id": "vpc-01024587050b396c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:subnet/subnet-05bcb56384cc10782",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bcb56384cc10782",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131674823919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-public-1",
              "Team": "Platform",
              "kubernetes.io/cluster/microservices-platform-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-public-1",
              "Project": "microservices-platform",
              "Team": "Platform",
              "kubernetes.io/cluster/microservices-platform-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01024587050b396c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:subnet/subnet-0bd5f5654501fb5e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd5f5654501fb5e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131674823919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-public-2",
              "Team": "Platform",
              "kubernetes.io/cluster/microservices-platform-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-public-2",
              "Project": "microservices-platform",
              "Team": "Platform",
              "kubernetes.io/cluster/microservices-platform-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01024587050b396c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:vpc/vpc-01024587050b396c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-059c071ac722c3171",
            "default_route_table_id": "rtb-0c44acb9ae37cc0ed",
            "default_security_group_id": "sg-00d97668e8cd4115e",
            "dhcp_options_id": "dopt-06d3bb3b873c17e92",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01024587050b396c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c44acb9ae37cc0ed",
            "owner_id": "131674823919",
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservices-platform-dev-vpc",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservices-platform-dev-vpc",
              "Project": "microservices-platform",
              "Team": "Platform"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:security-group/sg-0e37b37b42b5052d2",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0e37b37b42b5052d2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e5b5a81de77fd906"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "microservi-dev-cluster-2025120411111975880000000f",
            "name_prefix": "microservi-dev-cluster-",
            "owner_id": "131674823919",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservi-dev-cluster",
              "Team": "Platform"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservi-dev-cluster",
              "Project": "microservices-platform",
              "Team": "Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-01024587050b396c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:131674823919:security-group/sg-0e5b5a81de77fd906",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5b5a81de77fd906",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e37b37b42b5052d2"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e37b37b42b5052d2"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e37b37b42b5052d2"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e37b37b42b5052d2"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e37b37b42b5052d2"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e37b37b42b5052d2"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "microservi-dev-node-20251204111119869000000010",
            "name_prefix": "microservi-dev-node-",
            "owner_id": "131674823919",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Development",
              "Environment": "dev",
              "Name": "microservi-dev-node",
              "Team": "Platform",
              "kubernetes.io/cluster/microservi-dev": "owned"
            },
            "tags_all": {
              "CostCenter": "Development",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "microservi-dev-node",
              "Project": "microservices-platform",
              "Team": "Platform",
              "kubernetes.io/cluster/microservi-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01024587050b396c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1644218128",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e37b37b42b5052d2",
            "security_group_rule_id": "sgr-0f86b96fdb01ef8f6",
            "self": false,
            "source_security_group_id": "sg-0e5b5a81de77fd906",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2000862269",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e5b5a81de77fd906",
            "security_group_rule_id": "sgr-02fbf8d982d2c2286",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1168879375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e5b5a81de77fd906",
            "security_group_rule_id": "sgr-0239d0a6881d5565b",
            "self": false,
            "source_security_group_id": "sg-0e37b37b42b5052d2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3738369819",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e5b5a81de77fd906",
            "security_group_rule_id": "sgr-093567eebd7c6f025",
            "self": false,
            "source_security_group_id": "sg-0e37b37b42b5052d2",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-395352205",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e5b5a81de77fd906",
            "security_group_rule_id": "sgr-03a2a9057c70f727c",
            "self": false,
            "source_security_group_id": "sg-0e37b37b42b5052d2",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-80520364",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e5b5a81de77fd906",
            "security_group_rule_id": "sgr-0b112fa1bbb54549e",
            "self": false,
            "source_security_group_id": "sg-0e37b37b42b5052d2",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1617794919",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e5b5a81de77fd906",
            "security_group_rule_id": "sgr-08c8819d23d193f46",
            "self": false,
            "source_security_group_id": "sg-0e37b37b42b5052d2",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-544290125",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e5b5a81de77fd906",
            "security_group_rule_id": "sgr-0cb18a2812f75af0b",
            "self": false,
            "source_security_group_id": "sg-0e37b37b42b5052d2",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2011273104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e5b5a81de77fd906",
            "security_group_rule_id": "sgr-066eb13e3b03aeaed",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3119238089",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e5b5a81de77fd906",
            "security_group_rule_id": "sgr-022b467d0752c69c9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-498362406",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0e5b5a81de77fd906",
            "security_group_rule_id": "sgr-086a4e0cb190555a8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}